# scrapy_tutorial

./: README.md  pyproject.toml
tutorial/: author.json
tutorial/tutorial/spiders/: author_spider.py  quotes_one_spider.py  quotes_three_spider.py  quotes_two_spider.py
