[tool.poetry]
name = "scrapy_tutorial"
version = "1.0.0"
description = "A Python scrapy framework (WEB Scraping) tutorial"
authors = ["Ralph Santos Souza"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
